Buttloads of cleanup, add vols to comparator